@startuml TurnOnDevices_ClassDiagram
skinparam classAttributeIconSize 0

class TurnOnDevices {
    +main(String[] args): void
    +TurnOnDevices(Connectable device): void
}

class Lamp {
    +turnOn(): void
    +turnOff(): void
    +isOn(): String
}

class Computer {
    +turnOn(): void
    +turnOff(): void
    +isOn(): String
}

class CoffeeMakerAdaptor {
    +turnOn(): void
    +turnOff(): void
    +isOn(): String
}



class Connectable <<Interface>> {
    +turnOn(): void
    +turnOff(): void
    +isOn(): String
}

class CoffeeMaker {
    +On(): void
    +Off(): void
    +isOff(): String
}   

TurnOnDevices -> Connectable

Connectable <|-- Lamp
Connectable <|-- Computer
Connectable <|-- CoffeeMakerAdaptor 

CoffeeMakerAdaptor --> CoffeeMaker
@enduml